--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,7 @@
     background-size: cover;
     height: 400px;
     position: relative;
+    margin-bottom: 50px;
 }
 .overlay{
     position: absolute;
@@ -13,3 +14,4 @@
     height: 100%;
     background:rgba(0, 0, 0, 0.432);
 }
+
