--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,16 @@
 .footer-section{
     background-color: rgba(0, 0, 0, 0.774);
-    height: 200px;
+    height: 100%;
     margin-top: 80px;
+}
+.icon-container{
+    display: flex;
+    justify-content: space-between;
+    width: 55%;
+    font-size: 17px;
+    color: rgb(137, 201, 223);
+}
+.info li{
+    list-style: none;
+    margin-top: 10px;
 }
