--- a/src/components/SignIn/signin.css
+++ b/src/components/SignIn/signin.css
@@ -4,3 +4,8 @@
     padding: 2px 10px;
     border-radius: 10px;
 }
+.signIn{
+    border: 2px solid rgb(10, 145, 10);
+    border-radius: 10px;
+    padding: 30px 0;
+}
