working on extra bonus

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 400px;
+    width: 100%;
     position: relative;
     margin-bottom: 50px;
 }
