--- a/src/components/SignIn/signin.css
+++ b/src/components/SignIn/signin.css
@@ -3,9 +3,11 @@
     margin: 10px 5px;
     padding: 2px 10px;
     border-radius: 10px;
+    width: 80%;
 }
 .signIn{
     border: 2px solid rgb(10, 145, 10);
     border-radius: 10px;
     padding: 30px 0;
+    margin-top: 80px;
 }
